components/envoy/envs/staging/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: proxy
  listeners:
  - name: http-main
    port: 80
    protocol: HTTP
    hostname: dev.reduce.isis.cclrc.ac.uk
  - name: https-main
    port: 443
    protocol: HTTPS
    hostname: dev.reduce.isis.cclrc.ac.uk
    allowedRoutes:
      namespaces:
        from: All
    tls:
      certificateRefs:
        - group: ""
          kind: Secret
          name: staging-reduce-isis-tls
