components/envoy/envs/staging/redirect-http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: envoy-gateway-system
spec:
  hostnames:
    - "dev.reduce.isis.cclrc.ac.uk"
